--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.4",
     "babel-polyfill": "^6.26.0",
+    "jest-localstorage-mock": "^2.3.0",
+    "jest-mock-axios": "^2.1.11",
     "sinon": "^7.1.1"
   }
 }
