--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "react-dom": "^16.6.0",
     "react-i18next": "^8.3.5",
     "react-js-pagination": "^3.0.2",
+    "react-redux": "^7.0.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.0",
     "react-test-renderer": "^16.6.0",
     "react-toastify": "^4.4.0",
-    "reactstrap": "^6.5.0"
+    "reactstrap": "^6.5.0",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
