--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "history": "^4.7.2",
     "i18next": "^12.0.0",
     "i18next-browser-languagedetector": "^2.2.3",
+    "jest-mock": "^24.8.0",
     "jwt-decode": "^2.2.0",
     "keycloak-js": "^4.5.0",
     "node-sass": "^4.9.4",
@@ -30,7 +31,9 @@
     "react-test-renderer": "^16.6.0",
     "react-toastify": "^4.4.0",
     "reactstrap": "^6.5.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "sweetalert2": "^8.11.1",
+    "sweetalert2-react-content": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
